--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
             <ul title="Misc">
                 <li><a href="https://app.telos.net"> app.telos.net</a></li>
                 <li><a href="https://app-dev.telos.net"> app-dev.telos.net</a></li>
-                <li><a href="https://app.telos.net/accounts/add"></a></li>
-                <li><a href="https://app.telos.net/testnet/developers"></a></li>
+                <li><a href="https://app.telos.net/accounts/add">https://app.telos.net/accounts/add</a></li>
+                <li><a href="https://app.telos.net/testnet/developers">app.telos.net/testnet/developers</a></li>
                 <li><a href="https://revoke.telos.net"> revoke.telos.net</a></li>
                 <li><a href="https://wallet.telos.net/"> wallet.telos.net</a></li>
                 <li><a href="https://app.telos.net/validators"> app.telos.net/validators</a></li>
