--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <li><a href="https://telos.net"> telos.net</a></li>
                 <li><a href="https://docs.telos.net"> docs.telos.net</a></li>
                 <li><a href="https://github.com/telosnetwork"> github.com/telosnetwork</a></li>
-                <li><a href="https://antelope.io/"> antelope.io</a></li>     
+                <li><a href="https://antelope.io"> antelope.io</a></li>     
                 <li><a href="https://github.com/AntelopeIO"> github.com/AntelopeIO</a></li>
             </ul> 
         </p>
@@ -33,7 +33,7 @@
             <ul title="Explorers">
                 <li><a href="https://explorer.telos.net"> explorer.telos.net</a></li>
                 <li><a href="https://explorer-test.telos.net"> explorer-test.telos.net</a></li>
-                <li><a href="https://teloscan.io"> teloscan.io/</a></li>
+                <li><a href="https://teloscan.io"> teloscan.io</a></li>
                 <li><a href="https://testnet.teloscan.io"> testnet.teloscan.io</a></li>
             </ul>  
         </p>
