--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
             <h4>Telos Links</h4>
         </div>
         <p>
-             <ul title="Documentation">
+             <h3>Documentation</h3>
+             <ul>
                 <li><a href="https://telos.net"> telos.net</a></li>
                 <li><a href="https://docs.telos.net"> docs.telos.net</a></li>
                 <li><a href="https://github.com/telosnetwork"> github.com/telosnetwork</a></li>
