--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     <div class="container"">
         <div class="title-icon">
             <img src="favicon-32x32.png" alt="telos-evm"/>
-            <h4>Telos Links</h4>
+            <h3>Telos Links</h3>
         </div>
         <p>
-             <h3>Documentation</h3>
+             <h4>Documentation</h4>
              <ul>
                 <li><a href="https://telos.net"> telos.net</a></li>
                 <li><a href="https://docs.telos.net"> docs.telos.net</a></li>
@@ -31,7 +31,8 @@
             </ul> 
         </p>
         <p>
-            <ul title="Explorers">
+            <h4>Explorers</h4>
+            <ul>
                 <li><a href="https://explorer.telos.net"> explorer.telos.net</a></li>
                 <li><a href="https://explorer-test.telos.net"> explorer-test.telos.net</a></li>
                 <li><a href="https://teloscan.io"> teloscan.io</a></li>
@@ -39,19 +40,22 @@
             </ul>  
         </p>
         <p>
-            <ul title="Bridges">
+            <h4>Bridges</h4>
+            <ul>
                 <li><a href="https://app.rubic.exchange/?fromChain=ETH&toChain=TELOS&from=ETH&to=TLOS"> app.rubic.exchange</a></li>
                 <li><a href="https://dapp.ptokens.io/swap?asset=tlos&from=telos&to=eth"> dapp.ptokens.io</a></li>
             </ul>  
         </p>  
         <p>
-            <ul title="Endpoints">
+            <h4>Endpoints</h4>
+            <ul>
                 <li><a href="https://monitor.telos.net/#/"> monitor.telos.net</a></li>
                 <li><a href="http://mainnet.telos.net/v2/docs/index.html"> mainnet.telos.net</a></li>
             </ul>  
         </p>
         <p>
-            <ul title="Misc">
+            <h4>Misc</h4>
+            <ul>
                 <li><a href="https://app.telos.net"> app.telos.net</a></li>
                 <li><a href="https://app-dev.telos.net"> app-dev.telos.net</a></li>
                 <li><a href="https://app.telos.net/accounts/add">https://app.telos.net/accounts/add</a></li>
