--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <p>
              <h4>Documentation</h4>
              <ul>
-                <li><a href="https://telos.net"> telos.net</a></li>
+                <li><a href="https://telos.net"> telos.net (main site)</a></li>
                 <li><a href="https://docs.telos.net"> docs.telos.net</a></li>
                 <li><a href="https://github.com/telosnetwork"> github.com/telosnetwork</a></li>
                 <li><a href="https://antelope.io"> antelope.io</a></li>     
@@ -29,8 +29,8 @@
         <p>
             <h4>Explorers</h4>
             <ul>
-                <li><a href="https://explorer.telos.net"> explorer.telos.net</a></li>
-                <li><a href="https://explorer-test.telos.net"> explorer-test.telos.net</a></li>
+                <li><a href="https://explorer.telos.net"> explorer.telos.net*</a></li>
+                <li><a href="https://explorer-test.telos.net"> explorer-test.telos.net*</a></li>
                 <li><a href="https://teloscan.io"> teloscan.io</a></li>
                 <li><a href="https://testnet.teloscan.io"> testnet.teloscan.io</a></li>
             </ul>  
@@ -45,22 +45,26 @@
         <p>
             <h4>Endpoints</h4>
             <ul>
-                <li><a href="https://monitor.telos.net/#/"> monitor.telos.net</a></li>
-                <li><a href="http://mainnet.telos.net/v2/docs/index.html"> mainnet.telos.net</a></li>
+                <li><a href="https://monitor.telos.net/#/"> monitor.telos.net (Endpoint Status)</a></li>
+                <li><a href="http://mainnet.telos.net/v2/docs/index.html"> mainnet.telos.net (Swagger)</a></li>
             </ul>  
         </p>
         <p>
             <h4>Misc</h4>
             <ul>
-                <li><a href="https://app.telos.net"> app.telos.net</a></li>
-                <li><a href="https://app-dev.telos.net"> app-dev.telos.net</a></li>
-                <li><a href="https://app.telos.net/accounts/add">https://app.telos.net/accounts/add</a></li>
-                <li><a href="https://app.telos.net/testnet/developers">app.telos.net/testnet/developers</a></li>
-                <li><a href="https://revoke.telos.net"> revoke.telos.net</a></li>
-                <li><a href="https://wallet.telos.net/"> wallet.telos.net</a></li>
-                <li><a href="https://app.telos.net/validators"> app.telos.net/validators</a></li>
+                <li><a href="https://app.telos.net"> app.telos.net* (Voting, Proposals, Profile, etc)</a></li>
+                <li><a href="https://app-dev.telos.net"> app-dev.telos.net*</a></li>
+                <li><a href="https://app.telos.net/accounts/add">https://app.telos.net/accounts/add* (Free Account Creation)</a></li>
+                <li><a href="https://app.telos.net/testnet/developers">app.telos.net/testnet/developers* (Testnet Faucet)</a></li>
+                <li><a href="https://revoke.telos.net"> revoke.telos.net^ (Revoke Permissions)</a></li>
+                <li><a href="https://wallet.telos.net/"> wallet.telos.net (Web Wallet)</a></li>
+                <li><a href="https://app.telos.net/validators"> app.telos.net/validators* (BP stats)</a></li>
             </ul>
         </p>
+        <div>
+            <p> * = Telos Native Only</p>
+            <p> ^ = Telos EVM only </p>
+        </div>       
     </div>
 
 </body>
