--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
                 <li><a href="https://wallet.telos.net/"> wallet.telos.net (Web Wallet)</a></li>
                 <li><a href="https://app.telos.net/validators"> app.telos.net/validators* (BP stats)</a></li>
             </ul>
-        </p>
-        <div>
-            <p> * = Telos Native Only</p>
-            <p> ^ = Telos EVM only </p>
-        </div>       
+        </p>    
     </div>
+    <div>
+            <span> * = Telos Native Only</span>
+            <span> ^ = Telos EVM only </span>
+    </div>   
 
 </body>
 
