--- a/index.html
+++ b/index.html
@@ -95,6 +95,10 @@ a {
 a:hover{
     text-decoration: underline;
 }
+                                                                                                                                       
+h4 {
+    margin: 0;                                                                                                                                   
+}
 
 img, h4 {
     display: inline-block;
