--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                 <li><a href="https://telos.net"> telos.net (main site)</a></li>
                 <li><a href="https://docs.telos.net"> docs.telos.net</a></li>
                 <li><a href="https://github.com/telosnetwork"> github.com/telosnetwork</a></li>
-                <li><a href="https://antelope.io"> antelope.io</a></li>     
-                <li><a href="https://github.com/AntelopeIO"> github.com/AntelopeIO</a></li>
+                <li><a href="https://antelope.io"> antelope.io*</a></li>     
+                <li><a href="https://github.com/AntelopeIO"> github.com/AntelopeIO*</a></li>
             </ul> 
         </p>
         <p>
