--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <ul>
                 <li><a href="https://app.telos.net"> app.telos.net* (Voting, Proposals, Profile, etc)</a></li>
                 <li><a href="https://app-dev.telos.net"> app-dev.telos.net*</a></li>
-                <li><a href="https://app.telos.net/accounts/add">https://app.telos.net/accounts/add* (Free Account Creation)</a></li>
+                <li><a href="https://app.telos.net/accounts/add">app.telos.net/accounts/add* (Free Account Creation)</a></li>
                 <li><a href="https://app.telos.net/testnet/developers">app.telos.net/testnet/developers* (Testnet Faucet)</a></li>
                 <li><a href="https://revoke.telos.net"> revoke.telos.net^ (Revoke Permissions)</a></li>
                 <li><a href="https://wallet.telos.net/"> wallet.telos.net (Web Wallet)</a></li>
