--- a/index.html
+++ b/index.html
@@ -52,19 +52,19 @@
         <p>
             <h4>Misc</h4>
             <ul>
-                <li><a href="https://app.telos.net"> app.telos.net* (Voting, Proposals, Profile, etc)</a></li>
+                <li><a href="https://app.telos.net"> app.telos.net (Voting, Proposals, Profile, etc)*</a></li>
                 <li><a href="https://app-dev.telos.net"> app-dev.telos.net*</a></li>
-                <li><a href="https://app.telos.net/accounts/add">app.telos.net/accounts/add* (Free Account Creation)</a></li>
-                <li><a href="https://app.telos.net/testnet/developers">app.telos.net/testnet/developers* (Testnet Faucet)</a></li>
-                <li><a href="https://revoke.telos.net"> revoke.telos.net^ (Revoke Permissions)</a></li>
+                <li><a href="https://app.telos.net/accounts/add">app.telos.net/accounts/add (Free Account Creation)*</a></li>
+                <li><a href="https://app.telos.net/testnet/developers">app.telos.net/testnet/developers (Testnet Faucet)*</a></li>
+                <li><a href="https://revoke.telos.net"> revoke.telos.net (Revoke Permissions)**</a></li>
                 <li><a href="https://wallet.telos.net/"> wallet.telos.net (Web Wallet)</a></li>
-                <li><a href="https://app.telos.net/validators"> app.telos.net/validators* (BP stats)</a></li>
+                <li><a href="https://app.telos.net/validators"> app.telos.net/validators (BP stats)*</a></li>
             </ul>
         </p>
         </br>
         <div>
           <span> * = Telos Native Only</span>
-          <span> ^ = Telos EVM only </span>
+          <span> ** = Telos EVM only </span>
         </div>  
     </div> 
 </body>
