--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
             <ul>
                 <li><a href="https://monitor.telos.net/#/"> monitor.telos.net (Endpoint Status)</a></li>
                 <li><a href="http://mainnet.telos.net/v2/docs/index.html"> mainnet.telos.net (Swagger)</a></li>
+                <li><a href="http://testnet.telos.net/v2/docs/static/index.html"> testnet.telos.net (Swagger)</a></li>
             </ul>  
         </p>
         <p>
