--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         <p>
             <h4>Bridges</h4>
             <ul>
+                <li><a href="https://app.multichain.org/#/router"> app.multichain.org </a></li>
                 <li><a href="https://app.rubic.exchange/?fromChain=ETH&toChain=TELOS&from=ETH&to=TLOS"> app.rubic.exchange</a></li>
                 <li><a href="https://dapp.ptokens.io/swap?asset=tlos&from=telos&to=eth"> dapp.ptokens.io</a></li>
             </ul>  
