--- a/index.html
+++ b/index.html
@@ -108,10 +108,12 @@ img, h4 {
 }
 
 .container{
-    right: 50%;
-    bottom: 50%;
-    transform: translate(50%,50%);
-    position: absolute;
+    display: block;
+    width: fit-content;
+    margin-left: auto;
+    margin-right: auto;
+    padding-bottom: 5rem;
+    padding-top: 2rem;
 }
 
 @font-face {
